# trispconv

./: .gitignore  README.md  pyproject.toml
docs/: autotune_stateful_kernel_pitfall.md
tests/: generate_spconv_goldens.py  test_anigen_weights.py  test_indices_strided.py  test_indices_subm.py  test_large_channel_reduction.py  test_tensor.py  test_vs_dense.py  test_vs_spconv.py
tests/fixtures/: spconv_golden_inverse_1x1x1.pt  spconv_golden_inverse_3x3x3.pt  spconv_golden_strided_s1_k2.pt  spconv_golden_strided_s2_p0.pt  spconv_golden_strided_s2_p1.pt  spconv_golden_subm_1x1x1_c16.pt  spconv_golden_subm_3x3x3_c16.pt  spconv_golden_subm_3x3x3_c32.pt  spconv_golden_subm_3x3x3_d2.pt
trispconv/: __init__.py
trispconv/pytorch/: __init__.py  compat.py  functional.py  indices.py  modules.py  tensor.py  triton_kernels.py  weight.py
trispconv/testing/: sparse_data.py
